syntax = "proto3";

package nova.social_service.v1;

// Social Service - 社交互动服务
// 管理 Likes/Comments/Shares 等社交互动
service SocialService {
  // ========== Like Operations ==========

  // 创建点赞
  rpc CreateLike(CreateLikeRequest) returns (CreateLikeResponse);

  // 删除点赞
  rpc DeleteLike(DeleteLikeRequest) returns (DeleteLikeResponse);

  // 获取帖子点赞数
  rpc GetLikeCount(GetLikeCountRequest) returns (GetLikeCountResponse);

  // 检查用户是否点赞
  rpc CheckUserLiked(CheckUserLikedRequest) returns (CheckUserLikedResponse);

  // 批量检查用户点赞状态
  rpc BatchCheckUserLiked(BatchCheckUserLikedRequest) returns (BatchCheckUserLikedResponse);

  // 获取帖子的点赞用户列表
  rpc GetPostLikes(GetPostLikesRequest) returns (GetPostLikesResponse);

  // ========== Comment Operations ==========

  // 创建评论
  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse);

  // 删除评论
  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse);

  // 更新评论
  rpc UpdateComment(UpdateCommentRequest) returns (UpdateCommentResponse);

  // 获取帖子评论列表
  rpc GetComments(GetCommentsRequest) returns (GetCommentsResponse);

  // 获取单条评论
  rpc GetComment(GetCommentRequest) returns (GetCommentResponse);

  // 获取帖子评论数
  rpc GetCommentCount(GetCommentCountRequest) returns (GetCommentCountResponse);

  // ========== Share Operations ==========

  // 创建分享
  rpc CreateShare(CreateShareRequest) returns (CreateShareResponse);

  // 获取帖子分享数
  rpc GetShareCount(GetShareCountRequest) returns (GetShareCountResponse);

  // 检查用户是否分享
  rpc CheckUserShared(CheckUserSharedRequest) returns (CheckUserSharedResponse);

  // ========== Batch Operations ==========

  // 批量获取帖子统计数据
  rpc BatchGetPostStats(BatchGetPostStatsRequest) returns (BatchGetPostStatsResponse);
}

// ========== Like Messages ==========

message CreateLikeRequest {
  string user_id = 1;   // 点赞用户ID
  string post_id = 2;   // 帖子ID
}

message CreateLikeResponse {
  bool success = 1;
  int64 like_count = 2;  // 更新后的点赞数
  string message = 3;
}

message DeleteLikeRequest {
  string user_id = 1;
  string post_id = 2;
}

message DeleteLikeResponse {
  bool success = 1;
  int64 like_count = 2;  // 更新后的点赞数
  string message = 3;
}

message GetLikeCountRequest {
  string post_id = 1;
}

message GetLikeCountResponse {
  int64 count = 1;
}

message CheckUserLikedRequest {
  string user_id = 1;
  string post_id = 2;
}

message CheckUserLikedResponse {
  bool liked = 1;
}

message BatchCheckUserLikedRequest {
  string user_id = 1;
  repeated string post_ids = 2;  // 最多 100 个
}

message BatchCheckUserLikedResponse {
  map<string, bool> results = 1;  // post_id -> liked
}

message GetPostLikesRequest {
  string post_id = 1;
  int32 limit = 2;   // 默认 50，最大 100
  int32 offset = 3;
}

message GetPostLikesResponse {
  repeated Like likes = 1;
  int32 total_count = 2;
  bool has_more = 3;
}

message Like {
  string id = 1;
  string user_id = 2;
  string post_id = 3;
  string created_at = 4;  // ISO 8601 format
}

// ========== Comment Messages ==========

message CreateCommentRequest {
  string post_id = 1;
  string user_id = 2;
  string content = 3;
  string parent_comment_id = 4;  // 可选，用于回复评论
}

message CreateCommentResponse {
  bool success = 1;
  Comment comment = 2;
  string message = 3;
}

message DeleteCommentRequest {
  string comment_id = 1;
  string user_id = 2;  // 用于权限验证
}

message DeleteCommentResponse {
  bool success = 1;
  string message = 2;
}

message UpdateCommentRequest {
  string comment_id = 1;
  string user_id = 2;  // 用于权限验证
  string content = 3;
}

message UpdateCommentResponse {
  bool success = 1;
  Comment comment = 2;
  string message = 3;
}

message GetCommentsRequest {
  string post_id = 1;
  int32 limit = 2;   // 默认 50，最大 100
  int32 offset = 3;
  string sort_by = 4;  // "created_at" (默认) 或 "updated_at"
  string order = 5;    // "desc" (默认) 或 "asc"
}

message GetCommentsResponse {
  repeated Comment comments = 1;
  int32 total_count = 2;
  bool has_more = 3;
}

message GetCommentRequest {
  string comment_id = 1;
}

message GetCommentResponse {
  Comment comment = 1;
}

message GetCommentCountRequest {
  string post_id = 1;
}

message GetCommentCountResponse {
  int64 count = 1;
}

message Comment {
  string id = 1;
  string post_id = 2;
  string user_id = 3;
  string content = 4;
  string parent_comment_id = 5;  // 空字符串表示顶级评论
  string created_at = 6;
  string updated_at = 7;
}

// ========== Share Messages ==========

message CreateShareRequest {
  string user_id = 1;
  string post_id = 2;
  string share_type = 3;  // "repost", "story", "dm" 等
}

message CreateShareResponse {
  bool success = 1;
  int64 share_count = 2;  // 更新后的分享数
  string message = 3;
}

message GetShareCountRequest {
  string post_id = 1;
}

message GetShareCountResponse {
  int64 count = 1;
}

message CheckUserSharedRequest {
  string user_id = 1;
  string post_id = 2;
}

message CheckUserSharedResponse {
  bool shared = 1;
}

// ========== Batch Operations Messages ==========

message BatchGetPostStatsRequest {
  repeated string post_ids = 1;  // 最多 100 个
}

message BatchGetPostStatsResponse {
  map<string, PostStats> stats = 1;  // post_id -> stats
}

message PostStats {
  int64 like_count = 1;
  int64 comment_count = 2;
  int64 share_count = 3;
}
